@@ -3,6 +3,7 @@
 	* Use crc32 hash in tcl-pages by default. This removes the mandatory md5 package requirement.
 	* Fix random test errors for cookfsVfs-1.9 because the file time is set to the current time and it will differ by a few seconds when the file is created
 	* Optimize compiler/linker flags
+	* Fix locked files during tests
 
 2024-05-03 Konstantin Kushnir <chpock@gmail.com>
 	* Fix missed quotes in pages.test
